// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPanelButton renders from content 1`] = `
<CustomizedActionButton
  ariaLabel="info and examples"
  iconProps={
    {
      "iconName": "iconName",
    }
  }
  onClick={[Function]}
>
  TEXT
</CustomizedActionButton>
`;

exports[`ContentPanelButton renders from path 1`] = `
<CustomizedActionButton
  ariaLabel="info and examples"
  iconProps={
    {
      "iconName": "iconName",
    }
  }
  onClick={[Function]}
>
  TEXT
</CustomizedActionButton>
`;

exports[`ContentPanelButton renders without iconName 1`] = `
<CustomizedActionButton
  ariaLabel="info and examples"
  iconProps={
    {
      "iconName": undefined,
    }
  }
  onClick={[Function]}
>
  TEXT
</CustomizedActionButton>
`;
